add pip install to notebook

--- a/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
+++ b/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
@@ -10,6 +10,25 @@
    },
    "outputs": [],
    "source": [
+    "# 🧠 EyePop.ai - Person Detection Workshop\n",
+    "# To run this notebook, you must provide your API credentials below\n",
+    "\n",
+    "# ✅ Step 1: Install required libraries\n",
+    "!pip install -q eyepop-sdk pillow matplotlib python-dotenv\n",
+    "\n",
+    "# ✅ Step 2: Provide your EyePop credentials"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
     "# flake8: noqa\n",
     "# This is a simple example of how to use the EyePop SDK \n",
     "# to detect text in an image\n",
