--- a/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
+++ b/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
@@ -14,7 +14,7 @@
     "# To run this notebook, you must provide your API credentials below\n",
     "\n",
     "# ✅ Step 1: Install required libraries\n",
-    "!pip install -q eyepop-sdk pillow matplotlib python-dotenv\n",
+    "!pip install -q eyepop pillow matplotlib python-dotenv\n",
     "\n",
     "# ✅ Step 2: Provide your EyePop credentials"
    ]
