simplify secret keys entry

--- a/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
+++ b/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
@@ -37,17 +37,12 @@
     "# For pretty printing\n",
     "import json\n",
     "\n",
-    "# .env configuration\n",
-    "from dotenv import load_dotenv\n",
-    "\n",
     "# For displaying images\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "load_dotenv()\n",
-    "\n",
-    "POP_ID = os.getenv(\"EYEPOP_POP_ID\")\n",
-    "SECRET_KEY = os.getenv(\"EYEPOP_SECRET_KEY\")\n",
+    "POP_ID = \"ADD YOUR POP ID\"\n",
+    "SECRET_KEY = \"ADD YOUR API KEY\"\n",
     "\n",
     "#example_image_path = './images/person1.jpg'\n",
     "#example_image_path = './images/person2.jpg'\n",
