Tweaks for notebook

--- a/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
+++ b/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
@@ -14,7 +14,7 @@
     "# To run this notebook, you must provide your API credentials below\n",
     "\n",
     "# ✅ Step 1: Install required libraries\n",
-    "!pip install -q eyepop pillow matplotlib python-dotenv\n",
+    "!pip install -q eyepop pillow matplotlib python-dotenv requests\n",
     "\n",
     "# ✅ Step 2: Provide your EyePop credentials"
    ]
@@ -37,6 +37,9 @@
     "# For pretty printing\n",
     "import json\n",
     "\n",
+    "import requests\n",
+    "from io import BytesIO\n",
+    "\n",
     "# For displaying images\n",
     "from PIL import Image\n",
     "import matplotlib.pyplot as plt\n",
@@ -44,32 +47,27 @@
     "POP_ID = \"ADD YOUR POP ID\"\n",
     "SECRET_KEY = \"ADD YOUR API KEY\"\n",
     "\n",
-    "#example_image_path = './images/person1.jpg'\n",
-    "#example_image_path = './images/person2.jpg'\n",
-    "example_image_path = './images/person4.jpg'\n",
+    "example_image_url = 'https://github.com/eyepop-ai/Labs/blob/main/python/PersonDetectionWorkshop/images/person4.jpg'\n",
     "\n",
     "with EyePopSdk.workerEndpoint(\n",
     "    pop_id=POP_ID,\n",
     "    secret_key=SECRET_KEY\n",
     ") as endpoint:\n",
     "\n",
-    "    result = endpoint.upload(example_image_path).predict()\n",
+    "    result = endpoint.load_from(example_image_url).predict()\n",
     "\n",
     "    print(json.dumps(result, indent=4))\n",
     "\n",
     "    filtered_objects = [obj for obj in result[\"objects\"] if obj[\"confidence\"] > 0.80]\n",
     "    filtered_result = {**result, \"objects\": filtered_objects}\n",
     "\n",
-    "    with Image.open(example_image_path) as image:\n",
+    "    response = requests.get(example_image_url)\n",
+    "\n",
+    "    with Image.open(BytesIO(response.content)) as image:\n",
     "        plt.imshow(image)\n",
     "\n",
     "    plot = EyePopSdk.plot(plt.gca())\n",
-    "    #plot.prediction(filtered_result)\n",
-    "\n",
-    "    # draw white box over entire image\n",
-    "    plt.gca().add_patch(\n",
-    "        plt.Rectangle((0, 0), image.width, image.height, color=\"white\", alpha=1)\n",
-    "    )\n",
+    "    plot.prediction(filtered_result)\n",
     "\n",
     "    # check \n",
     "    for obj in filtered_result[\"objects\"]:\n",
@@ -93,7 +91,8 @@
     "            plt.plot(point[\"x\"], point[\"y\"], \"bo\")\n",
     "            plt.text(point[\"x\"], point[\"y\"], point[\"classLabel\"], fontsize=12, color=\"blue\")\n",
     "    \n",
-    "    plt.show()\n"
+    "    plt.show()\n",
+    "\n"
    ]
   }
  ],
