fix url + remove red boxes

--- a/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
+++ b/python/PersonDetectionWorkshop/EyePop_Demo.ipynb
@@ -47,7 +47,7 @@
     "POP_ID = \"ADD YOUR POP ID\"\n",
     "SECRET_KEY = \"ADD YOUR API KEY\"\n",
     "\n",
-    "example_image_url = 'https://github.com/eyepop-ai/Labs/blob/main/python/PersonDetectionWorkshop/images/person4.jpg'\n",
+    "example_image_url = 'https://github.com/eyepop-ai/Labs/blob/main/python/PersonDetectionWorkshop/images/person4.jpg?raw=true'\n",
     "\n",
     "with EyePopSdk.workerEndpoint(\n",
     "    pop_id=POP_ID,\n",
@@ -73,18 +73,6 @@
     "    for obj in filtered_result[\"objects\"]:\n",
     "        if obj[\"classLabel\"] != \"person\":\n",
     "            continue\n",
-    "\n",
-    "        # draw a red box around the person, just a border\n",
-    "        plt.gca().add_patch(\n",
-    "            plt.Rectangle(\n",
-    "            (obj[\"x\"], obj[\"y\"]),\n",
-    "            obj[\"width\"],\n",
-    "            obj[\"height\"],\n",
-    "            edgecolor=\"red\",\n",
-    "            facecolor=\"none\",\n",
-    "            linewidth=2,\n",
-    "            )\n",
-    "        )\n",
     "\n",
     "        for point in obj[\"keyPoints\"][0]['points']:\n",
     "            print(point)\n",
